EUW-268: grant-types and auth-details added